tests/paczka1/small_fuzzy/59287053.err
Error in line 5: A148 A377 29,3
Error in line 12: GyL0nPPhqh A148 80,5
Error in line 13: GyL0nPPhqh A261 79,0
